Updated capstone notebook with link to nbviewer

--- a/IBM-Data-Science-Capstone-Project-Anthony-Albertyn.ipynb
+++ b/IBM-Data-Science-Capstone-Project-Anthony-Albertyn.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## <font color='red' >This project contains several interactive maps and GitHub will not display them</font>\n",
+    "\n",
+    "#### <font color='red' >Please view this project using the following link to see the maps:</font>   \n",
+    "\n",
+    "https://nbviewer.jupyter.org/github/anthonyalbertyn/Coursera_Capstone/blob/main/IBM-Data-Science-Capstone-Project-Anthony-Albertyn.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Felonies Involving a Dangerous Weapon Near New York Schools in 2019\n",
     "### IBM Data Science Capstone Project\n",
     "### Author: Anthony Albertyn"
