Update colour in first cell of Capstone Project

--- a/IBM-Data-Science-Capstone-Project-Anthony-Albertyn.ipynb
+++ b/IBM-Data-Science-Capstone-Project-Anthony-Albertyn.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='red' >This project contains several interactive maps and GitHub will not display them</font>\n",
+    "## *** This project contains several interactive maps and GitHub will not display them ***\n",
     "\n",
-    "#### <font color='red' >Please view this project using the following link to see the maps:</font>   \n",
+    "#### Please view this project using the following link to see the maps: \n",
     "\n",
     "https://nbviewer.jupyter.org/github/anthonyalbertyn/Coursera_Capstone/blob/main/IBM-Data-Science-Capstone-Project-Anthony-Albertyn.ipynb"
    ]
