Update capstone notebook and report

--- a/IBM-Data-Science-Capstone-Project-Anthony-Albertyn.ipynb
+++ b/IBM-Data-Science-Capstone-Project-Anthony-Albertyn.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "## *** This project contains several interactive maps and GitHub will not display them ***\n",
     "\n",
-    "#### Please view this project using the following link to see the maps: \n",
+    "#### Please view this project using NB Viewer: \n",
     "\n",
-    "https://nbviewer.jupyter.org/github/anthonyalbertyn/Coursera_Capstone/blob/main/IBM-Data-Science-Capstone-Project-Anthony-Albertyn.ipynb"
+    "https://nbviewer.jupyter.org/"
    ]
   },
   {
@@ -2143,7 +2143,9 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2175,20 +2177,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Conclusion"
+    "# 6. Discussion"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.1 Summary\n",
+    "### 6.1 Key observations:\n",
+    "\n",
+    "1. There were 521 high schools that had a felony, involving a dangerous weapon, committed within a 500 m radius from the scool in 2019\n",
+    "2. Most of these schools were segmented into cluster 4, 1 and 0\n",
+    "3. The least number of schools were segmented into cluster 2, followed by cluster 3 and 5\n",
+    "4. The top-twenty at-risk high schools were mostly located in Brooklyn and New York city\n",
+    "5. The top-twenty high schools appeared in approximately 5 areas on the map and in each area, the schools were fairly close to each other.\n",
+    "\n",
+    "### 6.2 Recommendations:\n",
+    "\n",
+    "1. Do more comprehensive research about all crime around the top twenty schools\n",
+    "2. Do an impact analysis to find out how affected high school children\n",
+    "3. Consider the demographics of the local areas when doing more comprehensive research\n",
+    "4. Involve the local high schools in the research project and share the research in an open source way with local authorities and schools so they can take action to reduce crime in their areas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.1 Summary\n",
     "\n",
     "The author set out to identify the top-twenty most at-risk high schools in New York state, using crime data from the NYPD and school location data from Foursquare and identify what areas of New York state are most affected. The audience that this research may be useful to is law enforcement, public bodies and social organisations that may be interested in using this research as input into decision-making relating to where to focus limited resources.\n",
     "\n",
     "The author has identified 521 high schools in New York state that had at least one felony involving a dangerous weapon that was within a 500 m radius from the school in 2019. These schools were clustered using a K-means machine learning algorithm into six clusters and mapped these schools. The author then identified the top-twenty most at risk high schools based on number of felonies nearby. For the top-twenty schools, the number of felonies involving a dangerous weapon ranged from 10 to 26 felonies per school. Eight of these schools were in Brooklyn and 12 of these schools were in New York. The top 3 at risk high schools were: The Brooklyn Latin School, The Young Women's Leadership School of East Harlem and The Heritage School.\n",
     "\n",
-    "### 6.2 Limitations of this research \n",
+    "### 7.2 Limitations of this research \n",
     "\n",
     "The limitation of this research are:\n",
     "\n",
@@ -2197,7 +2226,7 @@
     "3. The author attempted to capture crimes before and after school hours, but did not distinguish between school-days and non-school days, like weekends, public holidays and school holidays.\n",
     "4. Due to time constraints, a thorough literature review was not carried out, nor was this resarch peer-reviewed.\n",
     "\n",
-    "### 6.3 Follow-on research\n",
+    "### 7.3 Follow-on research\n",
     "\n",
     "A potential future direction for related research could be to consider only school-days and to compare this data over time to see how crime is changing over time. It might also be useful to include other crimes and then segment neighborhoods by level of crime mix near schools.\n"
    ]
